// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a schedule 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "attrs": {},
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "*/1 * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task using rate of 3h 1`] = `
{
  ".wing/ontick0_c83eddbe.js": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? (new (require("[REDACTED]/wingsdk/src/target-sim/schedule.ontick.inflight.js")).ScheduleOnTickHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
console.log("Hello from schedule!");
}
};
})())({

}), args: {} }));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "target": "root/my_schedule/OnTick0",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c8d61fcab25f1c27fcb0f0ba29e4888a7041c8029f",
        "attrs": {},
        "path": "root/my_schedule/OnTick0/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
      {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "attrs": {},
        "path": "root/my_schedule/OnTick0",
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "attrs": {},
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "* */3 * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "attrs": {},
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "children": {
                "Policy": {
                  "constructInfo": {
                    "fqn": "constructs.Construct",
                    "version": "10.3.0",
                  },
                  "display": {
                    "description": "A simulated resource policy",
                    "hidden": true,
                    "title": "Policy",
                  },
                  "id": "Policy",
                  "path": "root/my_schedule/OnTick0/Policy",
                },
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task using rate of 10m 1`] = `
{
  ".wing/ontick0_c83eddbe.js": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? (new (require("[REDACTED]/wingsdk/src/target-sim/schedule.ontick.inflight.js")).ScheduleOnTickHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
console.log("Hello from schedule!");
}
};
})())({

}), args: {} }));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "target": "root/my_schedule/OnTick0",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c8d61fcab25f1c27fcb0f0ba29e4888a7041c8029f",
        "attrs": {},
        "path": "root/my_schedule/OnTick0/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
      {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "attrs": {},
        "path": "root/my_schedule/OnTick0",
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "attrs": {},
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "*/10 * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "attrs": {},
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "children": {
                "Policy": {
                  "constructInfo": {
                    "fqn": "constructs.Construct",
                    "version": "10.3.0",
                  },
                  "display": {
                    "description": "A simulated resource policy",
                    "hidden": true,
                    "title": "Policy",
                  },
                  "id": "Policy",
                  "path": "root/my_schedule/OnTick0/Policy",
                },
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task with cron 1`] = `
{
  ".wing/ontick0_c83eddbe.js": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? (new (require("[REDACTED]/wingsdk/src/target-sim/schedule.ontick.inflight.js")).ScheduleOnTickHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
console.log("Hello from schedule!");
}
};
})())({

}), args: {} }));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "target": "root/my_schedule/OnTick0",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c8d61fcab25f1c27fcb0f0ba29e4888a7041c8029f",
        "attrs": {},
        "path": "root/my_schedule/OnTick0/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
      {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "attrs": {},
        "path": "root/my_schedule/OnTick0",
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "attrs": {},
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "* * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "attrs": {},
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "children": {
                "Policy": {
                  "constructInfo": {
                    "fqn": "constructs.Construct",
                    "version": "10.3.0",
                  },
                  "display": {
                    "description": "A simulated resource policy",
                    "hidden": true,
                    "title": "Policy",
                  },
                  "id": "Policy",
                  "path": "root/my_schedule/OnTick0/Policy",
                },
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
